# system-agent-poc

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  server-listener.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  server.rs
